# LOIS4

./: .gitignore  grammar  pyproject.toml
src/: main.py  parser.py
src/equation/: __init__.py  polynomial_equation_solver.py  simple_equation_solver.py  system_equation_solver.py
src/logic/: __init__.py  fuzzy_logic_algebra.py  implicator.py  inducted_implicator.py  invertor.py  tnorm.py
src/map/: __init__.py  fuzzy_map.py  fuzzy_map_algebra.py
src/set/: __init__.py  fuzzy_set.py  fuzzy_set_algebra.py
